--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "react": "^17.0.1",
-    "react-async-hook": "^4.0.0",
     "react-dom": "^17.0.1",
     "react-resize-observer": "^1.1.1",
     "react-scripts": "4.0.1",
@@ -44,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "ts-jest": "^27.1.2"
   }
 }
